// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render correctly 1`] = `
.c0 {
  border: 0.1rem solid;
  border-radius: 0.6rem;
  cursor: pointer;
  font-family: 'Noto Sans JP',sans-serif;
  font-size: 1.4rem;
  font-style: normal;
  font-weight: 500;
  line-height: 2rem;
  padding: 0.8rem 1.6rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.25s ease-in-out,border-color 0.25s ease-in-out;
  transition: background-color 0.25s ease-in-out,border-color 0.25s ease-in-out;
  background-color: #2962ff;
  border-color: #2962ff;
  color: #fff;
  padding: 1.1rem 2.2rem;
  box-shadow: 0 0.2rem 0.3rem rgba(51,51,51,0.2);
}

.c0 > svg {
  fill: currentColor;
  height: 2rem;
  margin-right: 0.5rem;
}

.c0:focus,
.c0:hover {
  background-color: #0039cb;
  border-color: #0039cb;
}

.c1 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

<button
  class="c0"
  color="primary"
>
  <svg
    class="c1"
    fill="currentColor"
    focusable="false"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      Emoticon
    </title>
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm3.5-9c.83 0 1.5-.67 1.5-1.5S16.33 8 15.5 8 14 8.67 14 9.5s.67 1.5 1.5 1.5zm-7 0c.83 0 1.5-.67 1.5-1.5S9.33 8 8.5 8 7 8.67 7 9.5 7.67 11 8.5 11zm3.5 6.5c2.33 0 4.31-1.46 5.11-3.5H6.89c.8 2.04 2.78 3.5 5.11 3.5z"
    />
  </svg>
  Emoticon
</button>
`;

exports[`<Button /> should render correctly 2`] = `
.c0 {
  border: 0.1rem solid;
  border-radius: 0.6rem;
  cursor: pointer;
  font-family: 'Noto Sans JP',sans-serif;
  font-size: 1.4rem;
  font-style: normal;
  font-weight: 500;
  line-height: 2rem;
  padding: 0.8rem 1.6rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.25s ease-in-out,border-color 0.25s ease-in-out;
  transition: background-color 0.25s ease-in-out,border-color 0.25s ease-in-out;
  background-color: transparent;
  border-color: transparent;
  color: #2962ff;
  padding: 0.6rem 1.2rem;
}

.c0 > svg {
  fill: currentColor;
  height: 2rem;
}

.c0:focus,
.c0:hover {
  background-color: rgba(41,98,255,0.1);
}

<a
  class="c0"
  color="default"
  href="/link"
>
  Link
</a>
`;
